[gd_scene load_steps=4 format=2]

[ext_resource path="res://demos/shop/slot_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://demos/shop/slot/custom_slot.gd" type="Script" id=2]
[ext_resource path="res://demos/shop/slot/CustomTooltip.tscn" type="PackedScene" id=3]

[node name="DragSlot" type="PanelContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
shift_quick_move = false
drag_disabled = true
drag_origin = 1

[node name="Layer" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="CustomTooltip" parent="Layer" instance=ExtResource( 3 )]
margin_left = 32.0
margin_top = 32.0
margin_right = 188.0
margin_bottom = 124.0

[node name="TooltipTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="item_added" from="." to="." method="_on_DragSlot_item_added"]
[connection signal="item_removed" from="." to="." method="_on_DragSlot_item_removed"]
[connection signal="mouse_entered" from="." to="." method="_on_DragSlot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DragSlot_mouse_exited"]
[connection signal="timeout" from="TooltipTimer" to="." method="_on_TooltipTimer_timeout"]
